--- a/server/pubspec.yaml
+++ b/server/pubspec.yaml
@@ -1,14 +1,13 @@
 name: server
 description: A sample command-line application.
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/matheusoreis/flame-multiplayer
 
 environment:
   sdk: ^3.6.1
 
-# Add regular dependencies here.
 dependencies:
-  # path: ^1.8.0
+  sqlite3: ^2.7.2
 
 dev_dependencies:
   lints: ^5.0.0
